src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F622_F622.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    TwoStarredExpressions: ~
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 9
  fix: ~
  parent: ~

