src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F633_F633.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    InvalidPrintSyntax: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 5
  fix: ~
  parent: ~

