src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F722_F722.py.snap
---
source: src/rules/pyflakes/mod.rs
expression: diagnostics
---
- kind:
    ForwardAnnotationSyntaxError: ///
  location:
    row: 9
    column: 11
  end_location:
    row: 9
    column: 16
  fix: ~
  parent: ~

